--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,9 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kiran
+spring.datasource.url=jdbc:mysql://localhost/parking
 spring.datasource.username=root
 spring.datasource.password=9849
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.sql.init.mode=always
